# parecode

./: .gitignore  CONFIG.md  Cargo.toml  EFFICIENCIES.md  PIE.md  PLAN.md  README.md  dist-workspace.toml  ideas_ryan.txt  json_example.txt  market.txt  parecode_efficiency_case.md  pie-v2-implementation-guide.md  project-intelligence-engine-spec.md
.github/workflows/: ci.yml
.parecode/: context_weights.json  conventions.md  last_agent_prompt.txt  last_plan_prompt.txt  last_plan_session.txt  narrative.json  paths.json  plan.md  task_memory.jsonl
.parecode/plans/: 1771896877-plan.json  1771961184-plan.json  1771975952-plan.json  1772581994-plan.json  1774022488-plan.json  1774022816-plan.json  1774024218-plan.json  1774024708-plan.json  1774217810-plan.json  1774219414-plan.json  1774220563-plan.json  1774222497-plan.json  1774223766-plan.json  1774226296-plan.json  1774227042-plan.json  1774228351-plan.json  1774229650-plan.json  1774230429-plan.json  1774230715-plan.json  1774231086-plan.json  1774232489-plan.json  1774233650-plan.json  1774234249-plan.json  1774234444-plan.json  1774235106-plan.json  1774282340-plan.json  1774283260-plan.json  1774307342-plan.json  1774353514-plan.json  1774393613-plan.json  1774394586-plan.json  1774395872-plan.json  1774396443-plan.json
docs/: PIE.md  PLAN.md
docs/performance/agentic_versus_opencode/: comparison.txt  open_router_parecode_open_router_minimax25.csv
src/: agent.rs  budget.rs  cache.rs  callgraph.rs  client.rs  config.rs  context_weights.rs  flowpaths.rs  git.rs  history.rs  hooks.rs  index.rs  init.rs  main.rs  mcp.rs  narrative.rs  pie.rs  plan.rs  sessions.rs  setup.rs  task_memory.rs  telemetry.rs  ui.rs
src/tools/: ask.rs  bash.rs  edit.rs  list.rs  mod.rs  patch.rs  pie_tool.rs  read.rs  recall.rs  search.rs  write.rs
src/tui/: chat.rs  config_view.rs  git_view.rs  input_box.rs  mod.rs  overlays.rs  plan_view.rs  render.rs  sidebar.rs  stats_view.rs
