[package]
name = "parecode"
version = "0.1.1"
edition = "2024"
description = "A terminal coding agent built for token efficiency and local model reliability"
repository = "https://github.com/PartTimer1996/parecode"
homepage = "https://github.com/PartTimer1996/parecode"
license = "MIT"
keywords = ["ai", "coding-agent", "llm", "ollama", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "parecode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
anyhow = "1"
futures-util = "0.3"
chrono = "0.4.44"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2.2"
flate2 = "1"
tar = "0.4"
zip = "8.1.0"
xz2 = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
